# application/src/main/java/br/com/fiap/phase4/exec/adapter/out/persistence/entity/ExecutionOrderMongoDocument.java
@@ -29,6 +29,8 @@ public class ExecutionOrderMongoDocument extends BaseMongoDocument {
 
     private List<ChecklistItemDocument> checklist = new ArrayList<>();
 
+    private List<MaintenanceMaterialDocument> materials = new ArrayList<>();
+
     private Instant completedAt;
 
     public ExecutionOrderMongoDocument(String id) {
